# DeeperSplunk

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  claude_desktop_config.example.json  pyproject.toml
examples/: example_sessions.md
src/deepersplunk/: __init__.py  config.py  memory.py  prompts.py  schemas.py  server.py  splunk_client.py
tests/: smoke_test.py
